# spln-2223

TP1/: README.md  medicina.json  medicina_marcado.txt
TP2/: README.md  medicina.txt  medicina_lex.py  medicina_representação_humana.py  medicina_yacc.py
TP3/: README.md  dicionario.html  generate_html.py  medicina.txt  medicina_lex.py  medicina_representação_humana.py  parser.out
TPC1/: medicina.py
TPC2/: medicina.txt  medicina_representação_humana.py
TPC3/: medicina_bin  medicina_yacc.py  parsetab.py
TPC4/: Harry_Potter_e_A_Pedra_Filosofal.txt  README.md  result.txt  tokenizador_spln.py
TPC5/: README.md
TPC5/TokenizerSPLN/: pyproject.toml  tokenizer_spln.md
TPC5/TokenizerSPLN/tokenizer_spln/: __init__.py
TPC6/: README.md  corpus.py  logs.txt
TPC6/articles/2023/5/: 9.html
TPC7/: README.md  cria_modelo.py  test.py
TPC8/: README.md  get_links.py  get_tables.py
